--- a/index.html
+++ b/index.html
@@ -1,41 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha Landing Page</title>
-    <style>
-        /* Estilos CSS podem ser colocados aqui */
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .container {
-            max-width: 600px;
-            background-color: #ffffff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            text-align: center; 
-        }
-        h1 {
-            color: #333333;
-        }
-        p {
-            color: #666666;
-        }
-        .input-field {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #cccccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
+    <title>discografhySukiWaterhouse</title>
+    
+<body>
+    <header>
+
+    </header>
+    <div>
         
+    </div>
+    <div class="container">
+        <h1>Bem-vindo à Sua Landing Page!</h1>
+        <p>Esta é uma página simples de demonstração.</p>
+        <p>Você pode adicionar mais conteúdo aqui, como formulários de inscrição, vídeos, depoimentos, etc.</p>
+        <a href="#" class="btn">Call to Action</a>
