--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     
 <body>
     <header>
+        <div class="logo">
+            <img src="images/logo_icon.png" alt="descrição">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#" class="paginic">Página Inicial</a></li>
+                <li><a href="#">Explorar</a></li>
+                <li><a href="#">Criar</a></li>
+            </ul>
+        </nav>
+                 </div>
 
     </header>
     <div>
-        
+
     </div>
     <div class="container">
         <h1>Bem-vindo à Sua Landing Page!</h1>
