--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>representaasmina</title>
+    <link rel="style" type="text/css" href="stylesheet.css" /> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -17,14 +21,25 @@
                 <li><a href="#">Criar</a></li>
             </ul>
         </nav>
-                 </div>
-
     </header>
-    <div>
-
-    </div>
+    
+    <div></div>
+    
     <div class="container">
         <h1>Bem-vindo à Sua Landing Page!</h1>
         <p>Esta é uma página simples de demonstração.</p>
         <p>Você pode adicionar mais conteúdo aqui, como formulários de inscrição, vídeos, depoimentos, etc.</p>
         <a href="#" class="btn">Call to Action</a>
+    </div>
+
+    <footer class="footer">
+        <div class="social-icons">
+            <a href="https://www.instagram.com" target="_blank"><i class="instagram"></i></a>
+            <a href="https://www.spotify.com" target="_blank"><i class="spotify"></i></a>
+            <a href="https://www.youtube.com" target="_blank"><i class="youtube"></i></a>
+        </div>
+    </footer>
+
+</body>
+
+</html>
